fix blame row alignment on firefox

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1546,6 +1546,8 @@ a.ui.label:hover {
   .ui.avatar.image {
     height: 18px;
     width: 18px;
+    display: block;
+    margin-top: 1px;
   }
 }
 
